Fixed nav bar on mobile

--- a/public/assets/css/calendar.css
+++ b/public/assets/css/calendar.css
@@ -14,7 +14,7 @@
 
 
 #links-info {
-  position: absolute;
+  position: fixed;
   bottom: 10px;
   right: 10px;
 }
