--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -1,65 +1,52 @@
 body {
   background: #FFFFFF;
   width: 100vw;
-  height: 100vh;
-}
+  height: 100vh; }
 
 header.navbar {
-  padding: 0 2vw;
-  height: 10vh;
+  padding: 3px 2vw;
+  min-height: 7vh;
   background: #7700ff;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-}
-header.navbar img {
-  width: 5vh;
-  height: 5vh;
-}
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5); }
+  header.navbar img {
+    width: 5vh;
+    height: 5vh; }
 
 main#container {
   padding: 3vh 5vw;
   width: 100vw;
-  min-height: 85vh;
-}
+  min-height: 95vh; }
 
 footer {
-  height: 5vh;
-}
+  height: 5vh; }
 
 .btn {
-  margin-top: 5px;
-}
+  margin-top: 5px; }
 
 .flash {
   width: max-content;
   padding: 0 10px;
   margin: 0 auto 2vh auto;
-  border-radius: 15px;
-}
+  border-radius: 15px; }
 
 .card {
-  margin-top: 10px;
-}
+  margin-top: 10px; }
 
 .btn.btn-link {
   background-color: transparent;
-  color: white;
-}
+  color: white; }
 
 .btn.btn-link:hover {
-  color: #33ffee;
-}
+  color: #33ffee; }
 
 .navbar .navbar-brand {
-  color: white;
-}
+  color: white; }
 
 .navbar .navbar-brand:hover {
-  color: #33ffee;
-}
+  color: #33ffee; }
 
 code {
   background: #232222;
-  display: block;
-}
+  display: block; }
 
 /*# sourceMappingURL=index.css.map */
