--- a/templates/assets/sass/_vars.sass
+++ b/templates/assets/sass/_vars.sass
@@ -1,3 +1,2 @@
 $front-grey-color: #7700ff
-$header-height: 10vh
 $footer-height: 5vh
