--- a/templates/assets/sass/main.sass
+++ b/templates/assets/sass/main.sass
@@ -7,9 +7,9 @@ body
 
 
 header.navbar
-    padding: 0 2vw
+    padding: 3px 2vw
 
-    height: $header-height
+    min-height: 7vh
     background: $front-grey-color
     box-shadow: 0 4px 10px rgba(0,0,0,.5)
 
@@ -21,7 +21,7 @@ header.navbar
 main#container
     padding: 3vh 5vw
     width: 100vw
-    min-height: 100vh - $header-height - $footer-height
+    min-height: 100vh - $footer-height
 
 
 footer
